fix about alignment

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,7 @@
+.profile-container {
+  max-width: 464px;
+}
+
 .profile-bg {
   background: linear-gradient(
     0deg,
